@@ -1,4 +1,5 @@
-07072013 -> jonnyboy -> updated all python scripts, put closing stuffin in main(), removed thread deamon's was causing shutdown issues with 2.*
+07072013 -> jonnyboy -> added update_relases run when have exceeded limits in seq
+						updated all python scripts, put closing stuffin in main(), removed thread deamon's was causing shutdown issues with 2.*
 						added gid to grabzbs and import threaded scripts, still need to add to non threaded
 						updated monitor predb to match the other totals, fixed typo in populate_nzb_guid.php
 						tmux - removed unneeded/unused timers
